--- a/mustr/Gemfile
+++ b/mustr/Gemfile
@@ -23,6 +23,16 @@ gem 'jbuilder', '~> 2.0'
 # bundle exec rake doc:rails generates the API under doc/api.
 gem 'sdoc', '~> 0.4.0', group: :doc
 
+gem "activejob", ">= 4.2.11"
+gem "rack", ">= 1.6.11"
+gem "sprockets", ">= 3.7.2"
+gem "rails-html-sanitizer", ">= 1.0.4"
+gem "loofah", ">= 2.2.3"
+gem "nokogiri", ">= 1.8.2"
+gem "actionview", ">= 4.2.7.1"
+gem "activerecord", ">= 4.2.7.1"
+
+
 # Use ActiveModel has_secure_password
 # gem 'bcrypt', '~> 3.1.7'
 
